# g3fc

./: README.md  g3fc_file_format_specification.html  g3fc_file_format_specification.txt  g3fc_file_format_specification.xml
csharp/: G3FC.csproj  G3FC.sln  Program.cs  README.md
golang/: README.md  g3fc.go  generate.ps1  go.mod  go.sum
libg3fc/: Cargo.toml  README.md  example.php  libg3fc_1.0_amd64.deb
python/: README.md  g3fc.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
rustlib/: Cargo.toml  php_example.php
rustlib/src/: lib.rs
