[package]
name = "g3fc"
version = "1.0.0"
edition = "2024"
authors = ["Lucas Guimarães - G3Pix <https://github.com/guimaraeslucas/>"]

# This section is crucial for FFI
[lib]
name = "g3fc"
crate-type = ["cdylib"] # Compile as a C-compatible Dynamic Library

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
# clap is no longer needed for the library itself
crc32fast = "1.3"
pbkdf2 = "0.12"
rand = "0.8"
reed-solomon-erasure = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0" # serde_json is now a primary dependency for FFI args
sha2 = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }
walkdir = "2.3"
aes-gcm = "0.10"
serde_bytes = "0.11"
regex = "1.9"
zstd = "0.13" # Added for zstd operations

# This allows for a global, thread-safe error message
lazy_static = "1.4.0" 
